add revenue history in period